# magicsvm

./: Cargo.toml  README.md  bench.sh
.github/workflows/: ci.yml  node-build.yml  node-docs-check.yml  node-docs.yml  node-lint.yml  release-node.yml
crates/loader/: Cargo.toml
crates/loader/src/: lib.rs
crates/loader/tests/: loader.rs
crates/magicsvm/: Cargo.toml
crates/magicsvm/benches/: max_perf.rs  simple_bench.rs
crates/magicsvm/src/: lib.rs
crates/magicsvm/tests/: account_locks.rs  blockhash.rs  compute_budget.rs  counter_test.rs  custom_syscall.rs  delegated_counter.rs  feature_accounts.rs  fees.rs  magic_svm.rs  parsing.rs  precompiles.rs  pubkey_signer.rs  spl.rs  stake_program.rs  system.rs  test_dflow_load.rs  tx_history.rs  upgradeable_loader.rs
crates/node-magicsvm/: Cargo.toml  package.json  tsconfig.json  typedoc.json
crates/node-magicsvm/magicsvm/: index.ts  internal.d.ts  internal.js
crates/node-magicsvm/no-ci-tests/: copyAccounts.test.ts
crates/node-magicsvm/src/: lib.rs  native_mint.rs  transaction_metadata.rs  util.rs
crates/node-magicsvm/tests/: addProgramViaSetAccount.test.ts  clock.test.ts  computeLimit.test.ts  counter.test.ts  featureSet.test.ts  getTransaction.test.ts  legacyTx.ts  manyInstructions.test.ts  nonExistentAccount.test.ts  nonExistentProgram.test.ts  oneTransfer.test.ts  setAccount.test.ts  sigVerify.test.ts  splLogging.test.ts  sysvar.test.ts  token.test.ts  transactionTarget.test.ts  usdcMint.test.ts  util.ts  warp.test.ts
crates/token/: Cargo.toml
crates/token/src/: approve.rs  approve_checked.rs  burn.rs  (+19 more)
(+6 files in other folders)
